tests/reference/asr-string_slice2-473fb60.stderr
semantic error: Error: Substring end index at (1) exceeds the string length
 --> tests/errors/string_slice2.f90:6:12
  |
6 |    print*, s(1: 9)
  |            ^^^^^^^ 
